--- a/src/main/resources/templates/notice/list.html
+++ b/src/main/resources/templates/notice/list.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 <html lang="ko"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      xmlns:th="www.thymeleaf.org"
-      layout:decorate="~{layout/base.html}"
-      >
-
-
+      xmlns:th="http://www.thymeleaf.org"
+      layout:decorate="~{layout/base.html}">
+<head>
+      <link rel="stylesheet" href="/css/notice.css">
+</head>
 <body>
 <div layout:fragment="content">
-
+      <div class="row content">
+            <div class="card">
+                  <div class="card-body">
+                        <table class="table">
+                              <thead>
+                              <tr>
+                                    <th scope="col">번호</th>
+                                    <th scope="col">제목</th>
+                                    <th scope="col">날짜</th>
+                              </tr>
+                              </thead>
+                              <tbody>
+                              <tr th:each="dto : ${noticesList}">
+                                    <th scope="row" th:text="${dto.noticeNo}"></th>
+                                    <td th:text="${dto.noticeName}"></td>
+                                    <td th:text="${#dates.format(dto.date, 'yyyy-MM-dd')}"></td>
+                              </tr>
+                              </tbody>
+                        </table>
+                  </div>
+            </div>
+      </div>
 </div>
 </body>
-
 </html>
