--- a/src/main/resources/templates/members/register.html
+++ b/src/main/resources/templates/members/register.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-  <title>le>회원가입</title>
+  <title>회원가입</title>
   <meta name="description" content="회원가입">
   <link rel="image_src" href="@@imageSrc">
   <meta property="og:title" content="le>방구석연구소 - 회원가입" />
@@ -16,8 +15,8 @@
   <meta property="og:site_name" content="le>방구석연구소" />
   <link rel="canonical" href="@@ogUrl" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.3/css/swiper.min.css">
-  <link rel="stylesheet" href="/static/css/common.css?ver=2024032903">
-  <link rel="stylesheet" href="/static/css/mypage.css?ver=2024032903">
+  <link rel="stylesheet" href="/static/css/common.css">
+  <link rel="stylesheet" href="/static/css/mypage.css">
   <script src="/static/js/jquery-3.6.0.min.js"></script>
 </head>
 
