read 화면 완료. list와 read 연결 성공.

--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -9,7 +9,7 @@
 
   </head>
   <body>
-    <div class="app" data-app style="height: 788px">
+    <div class="app">
       <header class="app-header home">
         <input type="checkbox" id="menuicon">
         <label for="menuicon">
