--- a/src/main/resources/static/css/notice.css
+++ b/src/main/resources/static/css/notice.css
@@ -1,6 +1,4 @@
-/* notice.css */
 
-/* 기본 설정 */
 body {
     font-family: 'Noto Sans', sans-serif;
     background-color: #f9f9f9;
@@ -8,7 +6,6 @@ body {
     padding: 0;
 }
 
-/* 컨테이너 스타일 */
 .content {
     width: 90%;
     margin: 30px auto;
@@ -16,18 +13,25 @@ body {
     background-color: #ffffff;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
+    overflow-y: auto;
 }
 
-/* 카드 스타일 */
 .card {
     background-color: #ffffff;
     border: none;
     border-radius: 8px;
     padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
 }
 
-/* 테이블 스타일 */
+.card-header {
+    font-size: 1.25rem;
+    font-weight: 600;
+    color: #333;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #e0e0e0;
+}
+
 .table {
     width: 100%;
     border-collapse: collapse;
@@ -36,13 +40,13 @@ body {
 
 .table th, .table td {
     padding: 12px 15px;
-    text-align: left;
+    text-align: center;
     border-bottom: 1px solid #e0e0e0;
 }
 
 .table th {
-    background-color: #f4f4f4;
-    color: #333;
+    background-color: #ffffff;
+    color: #000000;
     font-weight: 600;
     font-size: 1rem;
 }
@@ -60,14 +64,69 @@ body {
     border-bottom: none;
 }
 
-/* 반응형 디자인 */
 @media (max-width: 768px) {
     .content {
         padding: 15px;
+    }
+    .card-header {
+        font-size: 1.15rem;
+        margin-bottom: 15px;
     }
 
     .table th, .table td {
         padding: 10px;
         font-size: 0.9rem;
     }
+
+    .form-control {
+        padding: 8px 12px;
+        font-size: 0.95rem;
+    }
+}
+.form-label {
+    font-weight: 600;
+    color: #333;
+    display: block;
+    margin-bottom: 5px;
+}
+
+.form-control {
+    padding: 10px 15px;
+    font-size: 1rem;
+    border: 0px solid #e0e0e0;
+    border-radius: 4px;
+    transition: border-color 0.2s;
+}
+
+.form-control:focus {
+    border: none;
+    outline: none;
+    box-shadow: none;
+}
+
+.mb-3 {
+    margin-bottom: 15px;
+}
+
+.form-title {
+    padding: 10px 15px;
+    border: 0px solid #e0e0e0;
+    border-radius: 4px;
+    transition: border-color 0.2s;
+    font-size: 20px;
+}
+.form-title:focus {
+    border: none;
+    outline: none;
+    box-shadow: none;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover {
+    color: inherit;
+    text-decoration: underline;
 }
