화면 오류 해결.

--- a/src/main/resources/templates/notice/list.html
+++ b/src/main/resources/templates/notice/list.html
@@ -27,7 +27,7 @@
                                                 [[${dto.noticeName}]]
                                           </a>
                                     </td>
-                                    <td th:text="${#dates.format(dto.date, 'yyyy-MM-dd')}"></td>
+                                    <td th:text="${dto.getFormattedDate()}"></td>
                               </tr>
                               </tbody>
                         </table>
