240821 CreateGame 화면 구현 중2

--- a/src/main/resources/templates/createGame/create.html
+++ b/src/main/resources/templates/createGame/create.html
@@ -8,50 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>방구석연구소</title>
     <meta name="description" content="">
-    <link rel="shortcut icon" href="./favicon.ico" />
-    <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="./favicon-24x24.png" sizes="24x24">
-    <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="./favicon-96x96.png" sizes="96x96">
-    <link rel="image_src" href="">
-    <meta property="og:title" content="" />
-    <meta property="og:type" content="article" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
-    <meta property="og:description" content="" />
-    <meta property="og:site_name" content="방구석연구소" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.3/css/swiper.min.css">
-    <link rel="stylesheet" href="/static/css/create2.css">
-    <link rel="stylesheet" href="/static/css/create.css">
-    <script src="/assets/js/jquery-3.6.0.min.js"></script>
-    <style>
-        html,
-        body {
-            font-size: 20.4444444px;
-        }
+    <link rel="stylesheet" href="/css/create2.css">
+    <link rel="stylesheet" href="/css/create.css">
 
-        @media (max-width: 500px) {
-
-            html,
-            body {
-                font-size: 4.16667vw;
-            }
-        }
-
-        .app .app-header {
-            align-items: center;
-            height: 2.48rem;
-            position: relative;
-            background-color: #fff;
-            flex-shrink: 0;
-            border-bottom: 1px solid #e8e8e8;
-        }
-
-        .app .app-header .app-header-btn.back {
-            height: 100%;
-            background: transparent url(https://cdn.banggooso.com/assets/images/icons/back-arrow-b.png) no-repeat center center / auto 1rem;
-        }
-    </style>
 </head>
 
 <body class="ko-KR">
@@ -62,17 +21,13 @@
         <button type="button" class="app-header-btn back" title="뒤로가기" onclick="backUp();"></button>
     </header>
     <main class="app-main brand">
-        <h2>방구석연구소는<br> 연구원들의 이야기가 듣고 싶어요!</h2>
-
+        <h2>재미보따리는<br> 여러분의 이야기가 듣고 싶어요!</h2>
         <div class="ask">
             <form id="brand">
                 <label id="fake-option">어떤 이야기가 하고 싶나요?</label>
                 <hidden id="hd_ask_option_value" value=""></hidden>
                 <select name="ask-options" id="ask-options">
-                    <option value="option2">이런 거 해주세요!</option>
-                    <option value="option1">문제가 있어요.</option>
-                    <option value="option3">응원해요!</option>
-                    <option value="option4">아무 이야기나 할래요.</option>
+
                 </select>
                 <div id="form-contents">
                     <label class="title">이메일</label>
