--- a/src/main/resources/templates/createGame/create.html
+++ b/src/main/resources/templates/createGame/create.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-    <title>방구석연구소</title>
+    <title>재미보따리</title>
     <meta name="description" content="">
     <link rel="stylesheet" href="/css/create2.css">
     <link rel="stylesheet" href="/css/create.css">
@@ -20,21 +20,26 @@
     <header class="app-header" style="border-bottom:0;">
         <button type="button" class="app-header-btn back" title="뒤로가기" onclick="backUp();"></button>
     </header>
+
     <main class="app-main brand">
-        <h2>재미보따리는<br> 여러분의 이야기가 듣고 싶어요!</h2>
+        <h2>재미보따리는<br> 여러분의 재미 있는 이야기를 듣고 싶어요!</h2>
         <div class="ask">
             <form id="brand">
                 <label id="fake-option">어떤 이야기가 하고 싶나요?</label>
-                <hidden id="hd_ask_option_value" value=""></hidden>
-                <select name="ask-options" id="ask-options">
 
-                </select>
                 <div id="form-contents">
-                    <label class="title">이메일</label>
-                    <input class="id" type="text" placeholder="이메일을 적어주세요." id="email-phone" name="email-phone">
+                    <label class="title">제목</label>
+                    <input class="id" type="text" placeholder="제목을 적어 주세요." id="email-phone" name="email-phone">
                     <br>
-                    <label class="title">이야기</label>
-                    <textarea id="mail_contents" placeholder="문제가 되는 파트에 대해 자세히 알려주세요. 빠르게 고쳐볼게요!" name="contents"></textarea>
+                    <br>
+                    <label class="title">질문</label>
+                    <textarea id="question" placeholder="질문을 차례 대로 적어 주세요." name="contents"></textarea>
+
+                    <label class="title">답변</label>
+                    <textarea id="answer" placeholder="질문에 대한 답변을 적어 주세요 예)1번질문 답변 1)xx 2)xx" name="contents"></textarea>
+
+                    <label class="title">결과</label>
+                    <textarea id="result" placeholder="결과를 작성 해 주세요." name="contents"></textarea>
 
                     <input type="submit" value="보내기" id="submitmail">
                 </div>
