--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -4,7 +4,7 @@
       xmlns:th="www.thymeleaf.org">
   <head>
     <meta charset="UTF-8">
-    <title>test</title>
+    <title>재미보따리 공지사항</title>
     <link href="/css/styles.css" rel="stylesheet">
 
   </head>
