--- a/src/main/resources/templates/createGame/create.html
+++ b/src/main/resources/templates/createGame/create.html
@@ -1,7 +1,8 @@
-
-
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:th="http://www.thymeleaf.org"
+      layout:decorate="~{layout/base.html}">
 
 <head>
     <meta charset="utf-8">
