--- a/src/main/resources/templates/createGame/create2.html
+++ b/src/main/resources/templates/createGame/create2.html
@@ -18,9 +18,9 @@
 <div layout:fragment="content">
 <div class="app" data-app style="height: 788px">
 
-    <header class="app-header" style="border-bottom:0;">
-        <button type="button" class="app-header-btn back" title="뒤로가기" onclick="backUp();"></button>
-    </header>
+<!--    <header class="app-header" style="border-bottom:0;">-->
+<!--        <button type="button" class="app-header-btn back" title="뒤로가기" onclick="backUp();"></button>-->
+<!--    </header>-->
 
     <main class="app-main brand">
         <h2>재미보따리는<br> 여러분의 재미 있는 이야기를 듣고 싶어요!</h2>
