--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>회원가입</title>
     <meta name="description" content="회원가입">
-    <link rel="image_src" href="@@imageSrc">
-    <link rel="canonical" href="@@ogUrl" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.3/css/swiper.min.css">
-    <link rel="stylesheet" href="/css/common.css?ver=2024032903">
+   <link rel="stylesheet" href="/css/common.css?ver=2024032903">
     <link rel="stylesheet" href="/css/mypage.css?ver=2024032903">
 <!--    자바스크립트 나중에-->
 <!--    <script src="/assets/js/jquery-3.6.0.min.js"></script>-->
@@ -59,7 +56,7 @@
 <!--    </form>-->
     <!-- footer -->
     <footer>
-        <p>사업자등록번호 897-87-01933</p>
+<!--        <p>사업자등록번호 897-87-01933</p>-->
     </footer>		<!-- footer -->
 </div>
 <!--    자바스크립트 나중에-->
