--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,14 +12,6 @@
         <link rel="image_src" href="https://cdn.banggooso.com/assets/images/common/ogimg.jpg">
         <link href="/css/styles.css" rel="stylesheet">
 
-        <meta property="og:title" content="방구석연구소" />
-        <meta property="og:type" content="article" />
-        <meta property="og:url" content="https://www.banggooso.com/" />
-        <meta property="og:image" content="https://cdn.banggooso.com/assets/images/common/ogimg.jpg" />
-        <meta property="og:description" content="방구석에서 시작하는 &#39;나&#39;연구소! 연애능력 테스트, 아이돌 포지션 테스트, 고인물 테스트" />
-        <meta property="og:site_name" content="방구석연구소" />
-        <meta property="fb:app_id" content="868684923711460" />
-        <link rel="canonical" href="https://www.banggooso.com/" />
         <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
         <link rel="stylesheet" href="/css/common.css">
         <link rel="stylesheet" href="/css/index.css">
@@ -47,8 +39,21 @@
                 <span></span>
                 <span></span>
             </label>
-            <div class="sidebar"></div>
-            <a class="logo">
+            <div class="sidebar">
+                <div id="menu-t"></div>
+                <div id="menu">
+                    <div class="profile-top">
+                        <div>
+                            <p class="login">로그인이 필요합니다.</p>
+                            <a class="gugugu" href="my/myroom_profile_edit.html" onclick="setPlatformGtag('프로필 사진', 'sidetab', '프로필 사진 버튼');">
+                                <img src="https://cdn.banggooso.com/assets/images/menu/profile-1.png" alt="나의 프로필 이미지" class="profile-img">
+                            </a>
+                            <p>나는 누구? 여긴 어디?</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a class="logo" onclick="location.href='/'">
                 <img src="/img/mainlogo2.png" alt="Main Logo" width="40px" height="40px">
             </a>
             <a class="mypage">
@@ -56,17 +61,7 @@
             </a>
         </header>
         <div layout:fragment="content"></div>
-        <div id="menu-t"></div>
-        <div id="menu">
-            <div class="profile-top">
-                <div class="login-img">
-                    <figure class="my-icon">
-                        <a class="gugugu" href="my/myroom_profile_edit.html" onclick="setPlatformGtag('프로필 사진', 'sidetab', '프로필 사진 버튼');"><img src="" alt="나 현젠디?님의 사진" id="apic"></a>
-                    </figure>
-                    <h4 class="my-name">
-                        나 현젠디?        </h4>
-                </div>
-            </div>
+
             <ul class="list">
                 <li class="my-room">
                     <a href="/my/myroom.html" onclick="setPlatformGtag('나의 방구석', 'sidetab', '나의 방구석 버튼');">
@@ -109,7 +104,7 @@
                     <div class="text_area">재미 보따리 한가득<br> 콘텐츠를 즐겨봐🎶</div>
                 </div>
                 <div class="character" onclick="javascript:clickBird('click');">
-                    <img src="https://cdn.banggooso.com/assets/images/common/character_renewal.png??ver=2024032903" alt="꾸꾸" />
+                    <img src="/img/mainlogo2.png" alt="Main Logo" width="113px" height="162px">
                 </div>
             </div>      <div class="recommend-wrapper">
             <div class="recommend-list">
@@ -166,7 +161,7 @@
                         <div>
                             <img src="https://cdn.banggooso.com/assets/images/category-icons/category-type-renewal.png" class="category-icon" alt="favicon">
                         </div>
-                        MBTI · 유형      </a>
+                        얼굴상      </a>
                 </li>
                 <li>
                     <a class="category-item" href="/search.php?q=케미 · 궁합" onclick="setPlatformGtag('케미궁합', 'main', '전체 카테고리 버튼');">
@@ -189,13 +184,7 @@
                         </div>
                         퀴즈 · 능력고사      </a>
                 </li>
-                <li>
-                    <a class="category-item" href="/search.php?q=미궁 · 방탈출" onclick="setPlatformGtag('미궁·방탈출', 'main', '전체 카테고리 버튼');">
-                        <div>
-                            <img src="https://cdn.banggooso.com/assets/images/category-icons/category-escape-renewal.png" class="category-icon" alt="favicon">
-                        </div>
-                        미궁 · 방탈출      </a>
-                </li>
+
                 <li>
                     <a class="category-item" href="/search.php?q=미니게임" onclick="setPlatformGtag('미니게임', 'main', '전체 카테고리 버튼');">
                         <div>
@@ -203,34 +192,7 @@
                         </div>
                         미니게임      </a>
                 </li>
-                <li>
-                    <a class="category-item" href="/search.php?q=짤 뽑기" onclick="setPlatformGtag('짤뽑기', 'main', '전체 카테고리 버튼');">
-                        <div>
-                            <img src="https://cdn.banggooso.com/assets/images/category-icons/category-pick-renewal.png" class="category-icon" alt="favicon">
-                        </div>
-                        짤 뽑기      </a>
-                </li>
-                <li>
-                    <a class="category-item" href="/search.php?q=짤 만들기" onclick="setPlatformGtag('짤만들기', 'main', '전체 카테고리 버튼');">
-                        <div>
-                            <img src="https://cdn.banggooso.com/assets/images/category-icons/category-make-renewal.png" class="category-icon" alt="favicon">
-                        </div>
-                        짤 만들기      </a>
-                </li>
-                <li>
-                    <a class="category-item" href="/search.php?q=운세 · 타로" onclick="setPlatformGtag('타로', 'main', '전체 카테고리 버튼');">
-                        <div>
-                            <img src="https://cdn.banggooso.com/assets/images/category-icons/category-luck-renewal.png" class="category-icon" alt="favicon">
-                        </div>
-                        운세 · 타로      </a>
-                </li>
-                <li>
-                    <a class="category-item" href="/sn/intro.html" onclick="setPlatformGtag('스낵테스트', 'main', '전체 카테고리 버튼');">
-                        <div>
-                            <img src="https://cdn.banggooso.com/assets/images/category-icons/category-snack-renewal.png" class="category-icon" alt="favicon">
-                        </div>
-                        스낵테스트      </a>
-                </li>
+
             </ul>        <div class="event-banner-wrapper">
             <a href="javascript:bannerClick(50,'https://www.metavv.com/ko/custom/10890030?utm_source=bs_app&amp;utm_medium=owned_media&amp;utm_campaign=template_king_got_test&amp;utm_content=0712_banner')" onclick="setPlatformGtag('배너', 'main', '킹받게하기시뮬레이션배너 클릭 버튼');">
                 <img src="https://cdn.banggooso.com/assets/images/banner/1720765339banner.png" alt="banner">
