--- a/src/main/resources/templates/createGame/create2.html
+++ b/src/main/resources/templates/createGame/create2.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>재미보따리 게임 생성</title>
     <meta name="description" content="">
-    <link rel="stylesheet" href="/css/create2.css">
+    <link rel="stylesheet" href="/css/create/create2.css">
 <!--    <link rel="stylesheet" href="/css/create.css">-->
 
 </head>
