rest api 시도중 태초부터 다시 생각해야될듯? 240823-20:54

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -39,7 +39,7 @@
 
   <main class="app-main">
     <h2> 로그인 </h2>
-    <form class="form_w" name="frm" method="post" action="login_proc.php">
+    <form class="form_w" name="frm" method="post" action="/api/members/login">
       <input type="text" name="userid" class="login-input w-100 display-block" placeholder="아이디 입력" required autofocus value="">
 
       <input type="password" name="password" id="password" class="login-input w-100 display-block" placeholder="비밀번호 입력" required value="">
