--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>회원가입</title>
     <meta name="description" content="회원가입">
-   <link rel="stylesheet" href="/css/common.css?ver=2024032903">
+    <link rel="stylesheet" href="/css/common.css?ver=2024032903">
     <link rel="stylesheet" href="/css/mypage.css?ver=2024032903">
 <!--    자바스크립트 나중에-->
 <!--    <script src="/assets/js/jquery-3.6.0.min.js"></script>-->
@@ -59,6 +59,48 @@
 <!--        <p>사업자등록번호 897-87-01933</p>-->
     </footer>		<!-- footer -->
 </div>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        document.getElementById('signupButton').addEventListener('click', function(event) {
+            event.preventDefault(); // 기본 폼 제출 동작 방지
+
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
+            const password2 = document.getElementById('password2').value;
+            const nickname = document.getElementById('nickname').value;
+
+            if (password !== password2) {
+                alert("비밀번호가 일치하지 않습니다.");
+                return;
+            }
+
+            fetch('/api/members/register', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    memberId: email,
+                    memberPw: password,
+                    memberName: nickname
+                })
+            })
+                .then(response => response.json())
+                .then(data => {
+                    if (data) {
+                        alert('회원가입 성공');
+                        window.location.href = '/login'; // 회원가입 후 로그인 페이지로 이동
+                    } else {
+                        alert('회원가입 실패');
+                    }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    alert('회원가입 중 오류가 발생했습니다.');
+                });
+        });
+    });
+</script>
 <!--    자바스크립트 나중에-->
 <!--<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>-->
 <!--<script src="https://cdn.banggooso.com/assets/js/clipboard.min.js"></script>-->
