240823 메인 건드려보는중2 서치 건드려보는중

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,39 +33,29 @@
     <body class="ko-KR"><div class="app index" data-app>
         <!-- End Google Tag Manager (noscript) -->
         <header class="app-header home">
-            <input type="checkbox" id="menuicon">
-            <label for="menuicon">
-                <span></span>
-                <span></span>
-                <span></span>
-            </label>
-            <div class="sidebar">
-                <div id="menu-t"></div>
-                <div id="menu">
-                    <div class="profile-top">
-                        <div>
-                            <p class="login">로그인이 필요합니다.</p>
-                            <a class="gugugu" href="my/myroom_profile_edit.html" onclick="setPlatformGtag('프로필 사진', 'sidetab', '프로필 사진 버튼');">
-                                <img src="https://cdn.banggooso.com/assets/images/menu/profile-1.png" alt="나의 프로필 이미지" class="profile-img">
-                            </a>
-                            <p>나는 누구? 여긴 어디?</p>
-                        </div>
-                    </div>
+            <a href="" onclick="setPlatformGtag('홈', 'main', '홈 버튼');" class="app-logo main">방구석연구소</a>
+            <div class="feature">
+                <a href="/search.php" onclick="setPlatformGtag('검색', 'main', '검색 버튼');" class="app-header-search-btn" aria-label="search-btn">
+                    <div id="search"></div>
+                </a>
+                <div id="ham">
+                    <img src="https://cdn.banggooso.com/assets/images/icons/menu_2.png" onclick="setPlatformGtag('사이드탭', 'main', '사이드탭 버튼');" alt="사이드탭 버튼">
                 </div>
             </div>
-            <a class="logo" onclick="location.href='/'">
-                <img src="/img/mainlogo2.png" alt="Main Logo" width="40px" height="40px">
-            </a>
-            <a class="mypage">
-                <img src="/img/mypage.png" alt="My Page" width="40px" height="40px">
-            </a>
         </header>
-        <div layout:fragment="content"></div>
-
+        <div id="menu-t" style="display: none;"></div>
+        <div id="menu">
+            <div class="profile-top">
+                <div>
+                    <p class="login">로그인이 필요합니다.</p>
+                    <a class="gugugu" href="my/myroom_profile_edit.html" onclick="setPlatformGtag('프로필 사진', 'sidetab', '프로필 사진 버튼');"><img src="https://i.ibb.co/b53f5fC/Mainlogo2.png" alt="나의 프로필 이미지" class="profile-img"></a>
+                    <p>나는 누구? 여긴 어디?</p>
+                </div>
+            </div>
             <ul class="list">
                 <li class="my-room">
                     <a href="/my/myroom.html" onclick="setPlatformGtag('나의 방구석', 'sidetab', '나의 방구석 버튼');">
-                        <h5 class="my-icon">나의 방구석</h5>
+                        <h5 class="my-icon">나의 보따리</h5>
                     </a>
                 </li>
                 <li class="my-notice">
@@ -83,13 +73,10 @@
                 <a class="my-send" href="send-ask-page.html" onclick="setPlatformGtag('의견 보내기', 'sidetab', '의견 보내기 버튼');">
                     <span class="my-icon">의견 보내기</span>
                 </a>
-                <a class="my-introduce" href="#" onclick="goBanner('https://www.notion.so/ss/f5ad2a30e1f1491a99f26019bb78ee40');setPlatformGtag('방구석연구소란?', 'sidetab', '방구석연구소란? 버튼');">
-                    <span class="my-icon">방구석연구소란?</span>
-                </a>
+
                 <a class="my-brand" href="brand-page.html" onclick="setPlatformGtag('제휴 문의', 'sidetab', '제휴 문의 버튼');">
                     <span>제휴 문의</span>
                 </a>
-                <select class="my-locale" name="my-locale" id="locale_options" onchange="setLocale(this)"></select>
                 <div class="btn-sahre-t">
                     <a href="#" class="btn-share kakao" onclick="goBanner('http://pf.kakao.com/_iGbxmK');setPlatformGtag('카카오톡 채널', 'sidetab', 'SNS 버튼');" aria-label="share-kakao"></a>
                     <a href="#" class="btn-share instagram" onclick="goBanner('https://www.instagram.com/banggooso.kr/');setPlatformGtag('인스타그램', 'sidetab', 'SNS 버튼');" aria-label="share-instagram"></a>
@@ -101,10 +88,10 @@
         <div class="home-feed">
             <div class="main-character-wrapper">
                 <div class="text-wrapper">
-                    <div class="text_area">재미 보따리 한가득<br> 콘텐츠를 즐겨봐🎶</div>
+                    <div class="text_area">재미 보따리 한가득!🌕<br>다른 이야기도 만들자</div>
                 </div>
                 <div class="character" onclick="javascript:clickBird('click');">
-                    <img src="/img/mainlogo2.png" alt="Main Logo" width="113px" height="162px">
+                    <img src="https://i.ibb.co/b53f5fC/Mainlogo2.png" alt="꾸꾸" />
                 </div>
             </div>      <div class="recommend-wrapper">
             <div class="recommend-list">
@@ -114,6 +101,14 @@
                             <div class="swiper-slide">
                                 <div class="slide-box">
                                     <div class="thum_icon new">NEW</div>
+                                    <a href="/intro.html?idx=223" class="link" onclick="setPlatformGtag('추천 - 다함께 강강술래', 'main', '메인 추천 버튼');" aria-label="recommendation-tab">
+                                        <div class="img-box" style="background-image:url('https://cdn.banggooso.com/assets/images/uploadImg/1724073538(1).png')"></div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="slide-box">
+                                    <div class="thum_icon hot">HOT</div>
                                     <a href="javascript:goBanner('https://www.metavv.com/ko/content/10918065');" class="link" onclick="setPlatformGtag('추천 - 운명의 새싹 테스트', 'main', '메인 추천 버튼');" aria-label="recommendation-tab">
                                         <div class="img-box" style="background-image:url('https://cdn.banggooso.com/assets/images/uploadImg/1723194763(1).png')"></div>
                                     </a>
@@ -135,25 +130,10 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="swiper-slide">
-                                <div class="slide-box">
-                                    <div class="thum_icon hot">HOT</div>
-                                    <a href="/intro.html?idx=221" class="link" onclick="setPlatformGtag('추천 - 사고력 테스트', 'main', '메인 추천 버튼');" aria-label="recommendation-tab">
-                                        <div class="img-box" style="background-image:url('https://cdn.banggooso.com/assets/images/uploadImg/1721039812(1).png')"></div>
-                                    </a>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>      <div class="landing-wrapper">
-            <a href="/es/home/" onclick="setPlatformGtag('서비스탭 - 감정가게', 'main', '서비스탭');" aria-label="emotionshop">
-                <img class="landing-es" onclick="" src="https://cdn.banggooso.com/assets/images/common/emotionshop.png" alt="emotionshop-image" />
-            </a>
-            <a href="/sr/" onclick="setPlatformGtag('서비스탭 - 숏퀴즈', 'main', '서비스탭');" aria-label="shortquiz">
-                <img class="landing-sr" src="https://cdn.banggooso.com/assets/images/common/shortquiz.png" alt="shortquiz-image" />
-            </a>
         </div>
             <ul class="all-category">
                 <li>
@@ -161,7 +141,7 @@
                         <div>
                             <img src="https://cdn.banggooso.com/assets/images/category-icons/category-type-renewal.png" class="category-icon" alt="favicon">
                         </div>
-                        얼굴상      </a>
+                        MBTI · 유형      </a>
                 </li>
                 <li>
                     <a class="category-item" href="/search.php?q=케미 · 궁합" onclick="setPlatformGtag('케미궁합', 'main', '전체 카테고리 버튼');">
@@ -200,32 +180,39 @@
         </div>
             <ul class="feed-list">
                 <li>
-                    <a href="javascript:goBanner('https://www.metavv.com/ko/content/10918065');setPlatformGtag('운명의 새싹 테스트', 'main', '메타브 콘텐츠 버튼');">
+                    <a href="/intro.html?idx=223">
                         <div class="item-header">
                             <div class="cate-icon">
-                                <img src="https://cdn.banggooso.com/assets/images/category-icons/category-type-renewal.png" class="item-icon" alt="favicon">
+                                <img src="https://cdn.banggooso.com/assets/images/category-icons/category-make-renewal.png" class="item-icon" alt="favicon">
                             </div>
                             <div class="cate-title-wrap">
-                                <span class="category-title">MBTI · 유형</span>
+                                <span class="category-title">나만의 보따리 만들기</span>
                             </div>
                             <div class="feed_thum_icon_box"><div class="feed_thum_icon new">NEW</div></div>        </div>
                         <figure class="thumb">
-                            <img class="lazy" src="https://cdn.banggooso.com/assets/images/common/lazy-empty-img.png" data-src="https://cdn.banggooso.com/assets/images/uploadImg/1723194762(PC).png" alt="운명의 새싹 테스트">
+                            <img class="lazy" src="https://cdn.banggooso.com/assets/images/common/lazy-empty-img.png" data-src="https://cdn.banggooso.com/assets/images/uploadImg/1724073537(PC).png" alt="다함께 강강술래">
                         </figure>
                         <div class="item-body">
                             <div class="title_wrap">
-                                <h4 class="title">운명의 새싹 테스트</h4>
+                                <h4 class="title">다함께 강강술래</h4>
                             </div>
                             <div class="s_title_wrap">
-                                <h5 class="s_title">나는 어떤 새싹으로 자랄까?</h5>
-                                <div class="metavv_icon_box" style=""><div class="feed_thum_icon_metavv"><img src="https://cdn.banggooso.com/assets/images/common/metavv-outlink-icon.png" alt="메타브 아이콘"></div></div>                      </div>
+                                <h5 class="s_title">랜선 강강술래에 함께 해줄래?</h5>
+                                <div class="item-actions">
+                                    <dl data-toggle="btn-like" data-idx="223" data-uaid="" data-target="#count1">
+                                        <dt><i class="icon-join"></i></dt>
+                                        <dd id="count1">3,450</dd>
+                                    </dl>
+                                    <dl>
+                                        <dt><i class="icon-reply"></i></dt>
+                                        <dd>318</dd>
+                                    </dl>
+                                </div>
+                            </div>
                         </div>
                     </a>
                 </li>
-            </ul>
-        </div>
-    </main>
-    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="https://cdn.banggooso.com/assets/js/clipboard.min.js"></script>
     <script src="/assets/js/common-re.js?ver=2024032903"></script>
@@ -244,5 +231,45 @@
             },
         });
     </script>
+                <script>
+                    document.addEventListener("DOMContentLoaded", function() {
+                        const ham = document.getElementById("ham");
+                        const menu = document.getElementById("menu");
+                        const menuT = document.getElementById("menu-t");
+                        const body = document.body;
+
+                        // 메뉴 열기
+                        ham.addEventListener("click", function() {
+                            menu.classList.add("ham_on");
+                            menuT.style.display = "block";
+                            body.style.overflow = "hidden"; // 스크롤 방지
+
+                            // 화면을 덮는 overlay 요소 추가
+                            const overlay = document.createElement("div");
+                            overlay.className = "menu_overlay";
+                            document.body.appendChild(overlay);
+                        });
+
+                        // 메뉴 외의 영역을 클릭했을 때 메뉴 닫기
+                        document.addEventListener("click", function(event) {
+                            const overlay = document.querySelector(".menu_overlay");
+
+                            if (overlay && !menu.contains(event.target) && !ham.contains(event.target)) {
+                                menu.classList.remove("ham_on");
+                                menuT.style.display = "none";
+                                body.style.overflow = "auto"; // 스크롤 활성화
+
+                                // overlay 요소 제거
+                                document.body.removeChild(overlay);
+                            }
+                        });
+                    });
+
+                </script>
+
+            </ul>
+        </div>
+    </main>
+    </div>
     </body>
 </html>
