--- a/src/main/resources/templates/createGame/create2.html
+++ b/src/main/resources/templates/createGame/create2.html
@@ -37,12 +37,15 @@
                     <textarea id="question" placeholder="질문을 차례대로 적어주세요." name="contents"></textarea>
 
                     <label class="title">답변</label>
-                    <textarea id="answer" placeholder="질문에 대한 답변을 적어 주세요 예)1번질문 답변 1)xx 2)xx" name="contents"></textarea>
+                    <textarea id="answer" placeholder="질문에 대한 답변을 적어 주세요. 예)1번질문 답변 1)xx 2)xx" name="contents"></textarea>
 
                     <label class="title">결과</label>
                     <textarea id="result" placeholder="결과를 작성 해 주세요." name="contents"></textarea>
 
-                    <input type="submit" value="보내기" id="submitmail">
+                    <a href="/main.html">
+                        <input type="button" value="보내기" id="submitmail">
+                    </a>
+                    <input type="reset" value="전체삭제" id="cancel">
                 </div>
             </form>
 
